// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurvedArrow renders with default values 1`] = `
<body>
  <div>
    <path
      d="M 0.8333333333333334,0 A 0.8333333333333334,0.8333333333333334 0 0 0 0.6637996728935979,-0.5037999987205211 L 0.3982798037361587,-0.30227999923231264 L 0.9998476951563913,0.01745240643728351 L 1.1948394112084761,-0.9068399976969379 L 0.929319542051037,-0.7053199982087295 A 1.1666666666666667,1.1666666666666667 0 0 1 1.1666666666666667,0 Z"
    />
  </div>
</body>
`;

exports[`CurvedArrow renders with the given parameters 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 0 123.18886761511514,179.47077227913556 L 115.45924507674343,169.6471815194237 L 100,200 L 146.3777352302303,208.9415445582711 L 138.64811269185856,199.11795379855926 A 62.5,62.5 0 0 1 131.25,204.12658773652743 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter angle is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 1 86.07199634467996,184.81753457925174 L 90.71466422978665,173.21168971950118 L 56.69872981077806,175 L 72.14399268935993,219.6350691585035 L 76.78666057446661,208.02922429875292 A 62.5,62.5 0 0 0 131.25,204.12658773652743 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter clockwise is modified 1`] = `
<body>
  <div>
    <path
      d="M 125,193.30127018922192 L 89.30647539976758,224.23374254087037 L 91.08872949980632,211.86145211739196 A 62.5,62.5 0 0 0 100,212.5 L 100,187.5 A 37.5,37.5 0 0 1 94.65323769988379,187.11687127043518 L 96.43549179992253,174.74458084695678 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter cx is modified 1`] = `
<body>
  <div>
    <path
      d="M 58.75,182.47595264191645 A 37.5,37.5 0 0 0 63.18886761511514,179.47077227913556 L 55.45924507674343,169.6471815194237 L 40,200 L 86.37773523023029,208.9415445582711 L 78.64811269185857,199.11795379855926 A 62.5,62.5 0 0 1 71.25,204.12658773652743 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter cy is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,72.47595264191645 A 37.5,37.5 0 0 0 123.18886761511514,69.47077227913555 L 115.45924507674343,59.6471815194237 L 100,90 L 146.3777352302303,98.94154455827109 L 138.64811269185856,89.11795379855926 A 62.5,62.5 0 0 1 131.25,94.12658773652741 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter fill is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 0 123.18886761511514,179.47077227913556 L 115.45924507674343,169.6471815194237 L 100,200 L 146.3777352302303,208.9415445582711 L 138.64811269185856,199.11795379855926 A 62.5,62.5 0 0 1 131.25,204.12658773652743 Z"
      fill="blue"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter radius is modified 1`] = `
<body>
  <div>
    <path
      d="M 123.75,191.13620667976085 A 47.5,47.5 0 0 0 126.35745509452636,189.51625691965305 L 119.42128270122994,179.117241940797 L 100,210 L 147.16597227441557,220.71330185622122 L 140.22979988111916,210.31428687736516 A 72.5,72.5 0 0 1 136.25,212.7868417743718 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter start is modified 1`] = `
<body>
  <div>
    <path
      d="M 100,187.5 A 37.5,37.5 0 0 0 105.34676230011621,187.11687127043518 L 103.56450820007748,174.74458084695678 L 75.00000000000001,193.30127018922195 L 110.69352460023244,224.23374254087037 L 108.9112705001937,211.86145211739196 A 62.5,62.5 0 0 1 100,212.5 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter stroke is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 0 123.18886761511514,179.47077227913556 L 115.45924507674343,169.6471815194237 L 100,200 L 146.3777352302303,208.9415445582711 L 138.64811269185856,199.11795379855926 A 62.5,62.5 0 0 1 131.25,204.12658773652743 Z"
      fill="red"
      stroke="blue"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter stroke-width is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 0 123.18886761511514,179.47077227913556 L 115.45924507674343,169.6471815194237 L 100,200 L 146.3777352302303,208.9415445582711 L 138.64811269185856,199.11795379855926 A 62.5,62.5 0 0 1 131.25,204.12658773652743 Z"
      fill="red"
      stroke-width="3"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter thickness is modified 1`] = `
<body>
  <div>
    <path
      d="M 112.5,171.65063509461098 A 25,25 0 0 0 115.45924507674343,169.6471815194237 L 100,200 L 146.3777352302303,208.9415445582711 A 75,75 0 0 1 137.5,214.9519052838329 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter transform is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 0 123.18886761511514,179.47077227913556 L 115.45924507674343,169.6471815194237 L 100,200 L 146.3777352302303,208.9415445582711 L 138.64811269185856,199.11795379855926 A 62.5,62.5 0 0 1 131.25,204.12658773652743 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(180)"
    />
  </div>
</body>
`;

exports[`CurvedArrow updates when the parameter width is modified 1`] = `
<body>
  <div>
    <path
      d="M 118.75,182.47595264191645 A 37.5,37.5 0 0 0 123.18886761511514,179.47077227913556 L 115.45924507674343,169.6471815194237 L 100,200 L 146.3777352302303,208.9415445582711 L 138.64811269185856,199.11795379855926 A 62.5,62.5 0 0 1 131.25,204.12658773652743 Z"
      fill="red"
      stroke="green"
      stroke-width="2"
      transform="rotate(90)"
    />
  </div>
</body>
`;
